change file structure

--- a/Books_Blazor/Pages/BookList/BookList.razor
+++ b/Books_Blazor/Pages/BookList/BookList.razor
@@ -1,6 +1,6 @@
 ﻿@using Books_Blazor.Models
 @inject BookService bookService
-
+@using Books_Blazor.Pages.BookList.BookListComponent
 <div class="container">
     <div class="row">
         <BookEdit SubmitCallBack="@ChangeBookList" book="book">
