fixed adding new book after edit

--- a/Books_Blazor/Pages/BookEdit.razor
+++ b/Books_Blazor/Pages/BookEdit.razor
@@ -53,6 +53,8 @@
         else
         {
             bookService.EditBook(book);
+            isEdit=false;
+             book = new();
         }
 
         SubmitCallBack.InvokeAsync();
